fix accordion on mobile

--- a/src/sass/accordion.sass
+++ b/src/sass/accordion.sass
@@ -15,6 +15,9 @@
     & .item-head
       font-weight: normal
       margin: 1rem 0
+      max-width: 80%
+      display: flex
+      align-items: center
       & p
         display: inline
         color: $greyDarker
@@ -22,6 +25,7 @@
         color: $primary
         right: 0
         position: absolute
+        width: 50px
     & .content
       overflow: hidden
       max-height: 0
